--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>HibernateStuding</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -21,4 +22,8 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+        <module>introduction</module>
+        <module>1_introduction</module>
+    </modules>
 </project>
